--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: "A collection of pseudorandom thoughts" # used by search engines
 theme_settings:
   # Meta
   title: IronMoon # blog's title
-  avatar: assets/img/triangle.svg
+  avatar: assets/img/capacitor.svg
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
 
@@ -17,9 +17,7 @@ theme_settings:
   header_text: > #two or three lines to describe your site
      <p>A collection of pseudorandom thoughts</p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
-  footer_text: >
-   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
-
+  footer_text: Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a> <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>  with Icons made by <a href="https://smashicons.com/">SmashIcons</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a> www.flaticon.com
   # Icons
   rss: true  # Make sure you created a feed.xml with feed.xml layout
   email_address: # Full email address, e.g. "sam@example.com"
@@ -44,10 +42,10 @@ theme_settings:
   vimeo:
   wordpress:
   youtube:
-  
+
   # Sharing options
   share_buttons:
-    facebook:
+    facebook: true
     twitter: true
     google_plus:
     tumblr:
@@ -58,19 +56,19 @@ theme_settings:
     wordpress:
     email: true
 
-  # Scripts / Features 
+  # Scripts / Features
   google_analytics: # Tracking ID, e.g. "UA-000000-01"
   disqus_shortname:
   katex: true # Enable if using math markup
-  
+
   special_page:
-    search: 
+    search:
       icon: "search" # Assuming page link and icon are the same
       enabled: true
     tags:
       icon: "tags"
       enabled: true
-  
+
   # Localization strings
   str_follow_on: "Follow on"
   str_rss_follow: "Follow RSS feed"
@@ -92,8 +90,8 @@ theme_settings:
 
   # Post navigation
   post_navigation: true
-  
-  
+
+
 # PAGINATION
 paginate: 5
 paginate_path: "blog/page:num"
