--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ url: "https://ironmoon.net"
 
 # THEME-SPECIFIC CONFIGURATION
 title: IronMoon                                    # site's title
-description: "A collection of pseudorandom thoughts"     # used by search engines
+description: "A collection of pseudorandom thoughts and experements"     # used by search engines
 avatar: assets/img/capacitor.svg                        # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 
 # Header and footer text
 header_text: >
-   <p>A collection of pseudorandom thoughts</p>
+   <p>A collection of pseudorandom thoughts and experements</p>
 header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a> <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a> with Icons made by <a href="https://smashicons.com/">SmashIcons</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a> and Stock Photography from <a href="https://www.pexels.com/">www.pexels.com</a>
 
